docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct ELECTRON_MAG_MOM_ANOMALY_2018;
ADD_IMPORT extern const cct ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_MASS_2018;
ADD_IMPORT extern const cct ELECTRON_MASS_ENERGY_EQUIVALENT_2018;
ADD_IMPORT extern const cct ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;
ADD_IMPORT extern const cct ELECTRON_MASS_IN_U_2018;
ADD_IMPORT extern const cct ELECTRON_MOLAR_MASS_2018;
ADD_IMPORT extern const cct ELECTRON_MUON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_MUON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_NEUTRON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_NEUTRON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_PROTON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_PROTON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_RELATIVE_ATOMIC_MASS_2018;